Split the server.js into providers and controllers

--- a/views/contact.html
+++ b/views/contact.html
@@ -98,14 +98,14 @@
 						</div>
 					</div>
 					<p>
-						<a href="mailto:blackhole@ab-themes.com">mace@macemuilman.nl</a>
+						<a href="mailto:mace@macemuilman.nl">mace@macemuilman.nl</a>
 					</p>
 				</div>
 				<div class="vozx_follow_us">
-					<a class="vozx_socialicon vozx_socialicon_facebook vozx_tooltip" data-gravity="s" href="#" target="_blank" title="Volg mij op Facebook!">
+					<a class="vozx_socialicon vozx_socialicon_facebook vozx_tooltip" data-gravity="s" href="https://www.facebook.com/mace.muilman" target="_blank" title="Volg mij op Facebook!">
 						<i class="ci_icon-facebook"></i>
 					</a>
-					<a class="vozx_socialicon vozx_socialicon_twitter vozx_tooltip" data-gravity="s" href="#" target="_blank" title="Volg mij op Twitter!">
+					<a class="vozx_socialicon vozx_socialicon_twitter vozx_tooltip" data-gravity="s" href="https://twitter.com/Mace95" target="_blank" title="Volg mij op Twitter!">
 						<i class="ci_icon-twitter"></i>
 					</a>
 				</div>
